--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -1,29 +1,85 @@
 # careers section data
 # if you don't have language feature(language.yml is empty), ignore "i18n" items
 - name:
-    detail: Company A
+    detail: Bentley Systems, Inc.
     i18n: company_a
   desc:
-    detail: I worked at Company A ...
+    detail: 
     i18n: company_a_desc
   date:
-    detail: Apr. 2016
+    detail: Apr. 2015 - Present
     i18n: company_a_date
   job:
-    detail: CTO
+    detail: Senior Software Engineer
     i18n: company_a_job
   icon: fa-plus-square
 
 - name:
-    detail: Company B
+    detail: Bentley Systems, Inc.
+    i18n: company_a
+  desc:
+    detail: 
+    i18n: company_a_desc
+  date:
+    detail: Jul. 2013 - Apr. 2015
+    i18n: company_a_date
+  job:
+    detail: Software Engineer II
+    i18n: company_a_job
+  icon: fa-plus-square
+
+- name:
+    detail: Bentley Systems, Inc.
+    i18n: company_a
+  desc:
+    detail: 
+    i18n: company_a_desc
+  date:
+    detail: Oct. 2012 - Jul. 2013
+    i18n: company_a_date
+  job:
+    detail: Software Engineer I
+    i18n: company_a_job
+  icon: fa-plus-square
+
+- name:
+    detail: Bentley Systems, Inc.
+    i18n: company_a
+  desc:
+    detail: 
+    i18n: company_a_desc
+  date:
+    detail: May 2011 – October 2012
+    i18n: company_a_date
+  job:
+    detail: Software Quality Analyst II
+    i18n: company_a_job
+  icon: fa-plus-square
+
+- name:
+    detail: Bentley Systems, Inc.
+    i18n: company_a
+  desc:
+    detail: 
+    i18n: company_a_desc
+  date:
+    detail: December 2007 – May 2011
+    i18n: company_a_date
+  job:
+    detail: Software Quality Analyst I
+    i18n: company_a_job
+  icon: fa-plus-square
+
+- name:
+    detail: Alachisoft
     i18n: company_b
   desc:
-    detail: I worked at Company B ...
+    detail: ...
     i18n: company_b_desc
   date:
-    detail: Jun. 2015
+    detail: August 2006 – November 2007
     i18n: company_b_date
   job:
-    detail: Full Stack Developer
+    detail: Software QA & Support Engineer
     i18n: company_b_job
   icon: fa-plus-square
