--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,10 @@ author:  # change following line to your infomation.
   first_name: Muhammad Jamil  # Be used at index page about me section.
   last_name: Akhtar  # Be used at index page about me section.
   avatar: /static/assets/img/landing/avatar.jpg  # upload your avatar at directory and edit it.
-  github_username: "https://github.com/jamilakhtar"  # Leave blank if you don't have now
-  linkedin_id: https://www.linkedin.com/in/muhammadjamilakhtar/  # Leave blank if you don't have now
+  github_username: jamilakhtar  # Leave blank if you don't have now
+  linkedin_id: muhammadjamilakhtar  # Leave blank if you don't have now
   facebook_username:   # Leave blank if you don't have now
-  twitter_username: "https://twitter.com/Jamil_Akhtar"  # Leave blank if you don't have now
+  twitter_username: Jamil_Akhtar  # Leave blank if you don't have now
   email: jamil.akhtar@live.com  # Leave blank if you don't have now
   cv:   # An online CV can be printed as PDF, leave blank if you don't have now
   # skill icons are on avatar's left and right side. Reference urls are http://fontawesome.io/ and http://fizzed.com/oss/font-mfizz
